Fix align page and exit to center

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,11 @@
   -webkit-text-size-adjust: 100%;
 }
 
+html {
+  padding: 0;
+  margin: 0;
+}
+
 .promptContainer svg {
   font-size: 50px;
 }
